--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Node.js Koa",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon --inspect-brk",
+    "start:prod": "node app.js"
   },
   "repository": {
     "type": "git",
